added russian translation of desktop file [Aleksey Klimov]

--- a/data/mime/revelation.desktop.in
+++ b/data/mime/revelation.desktop.in
@@ -3,11 +3,14 @@ Version=@VERSION@
 Encoding=UTF-8
 Name=Revelation Password Manager
 Name[fr]=Gestionnaire de mots de passe Revelation
+Name[ru]=Менеджер паролей
 GenericName=Password Manager
 GenericName[en_US]=Password Manager
 GenericName[fr]=Gestionnaire de mots de passe
+GenericName[ru]=Менеджер паролей
 Comment=Organize and secure your passwords
 Comment[fr]=Organise et sécurise vos mots de passe
+Comment[ru]=Безопасное управление вашими паролями
 Exec=revelation
 Icon=revelation
 Terminal=false
