added swedish translation of desktop file [Daniel Nylander]

--- a/data/mime/revelation.desktop.in
+++ b/data/mime/revelation.desktop.in
@@ -4,13 +4,16 @@ Encoding=UTF-8
 Name=Revelation Password Manager
 Name[fr]=Gestionnaire de mots de passe Revelation
 Name[ru]=Менеджер паролей
+Name[sv]=Lösenordshanteraren Revelation
 GenericName=Password Manager
 GenericName[en_US]=Password Manager
 GenericName[fr]=Gestionnaire de mots de passe
 GenericName[ru]=Менеджер паролей
+GenericName[sv]=Lösenordshanterare
 Comment=Organize and secure your passwords
 Comment[fr]=Organise et sécurise vos mots de passe
 Comment[ru]=Безопасное управление вашими паролями
+Comment[sv]=Organisera och säkra upp dina lösenord
 Exec=revelation
 Icon=revelation
 Terminal=false
