--- a/doc/file-specification/stylesheets/xhtml-chunks.xsl.in
+++ b/doc/file-specification/stylesheets/xhtml-chunks.xsl.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
-	<xsl:import href="/usr/share/xml/docbook/xhtml/docbook.xsl" />
+	<xsl:import href="$docbook_xsl_dir$/xhtml/chunk.xsl" />
 	<xsl:import href="xhtml-common.xsl" />
 </xsl:stylesheet>
