added boilerplate user interface code

--- a/src/SConscript
+++ b/src/SConscript
@@ -34,6 +34,8 @@ env.InstallScript(env, "$bindir", scripts)
 # handle package
 package_source = [
 	"package/__init__.py",
+	"package/config.py",
+	"package/ui.py",
 ]
 
 package = env.PythonBytecode(package_source)
