--- a/src/SConscript
+++ b/src/SConscript
@@ -32,9 +32,12 @@ env.InstallScript(env, "$bindir", scripts)
 
 
 # handle package
-package_source = [
+package_source = env.Substitute([
+	"package/config.py.in",
+]) + [
 	"package/__init__.py",
-	"package/config.py",
+	"package/dialog.py",
+	"package/stock.py",
 	"package/ui.py",
 ]
 
